# talk-serde-dyn-schema

./: Cargo.toml  README.md
benches/: serde.rs
src/: binary.rs  de.rs  lib.rs  main.rs  ser.rs  tests.rs  ty.rs  varint.rs
src/fast/: de.rs  mod.rs  ser.rs
src/flatbin/: builder.rs  mod.rs  util.rs
src/slow/: de.rs  mod.rs  ser.rs
