[package]
name = "talk-serde-dyn-schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[dependencies]
arrayvec = "0.7.4"
serde = "1.0.197"
serde_json = "1.0.115"
thiserror = "1.0.58"

[[bench]]
name = "serde"
harness = false
